Minor fix for header/footer story thumbnail spacing

--- a/style.css
+++ b/style.css
@@ -36,10 +36,10 @@ p.caption {font-family:"Helvetica Neue",Helvetica,sans-serif;font-size:12px;}
 .header_stories {background-color:#333;color:#FFF;padding-bottom:15px;display:none;}
 .header_stories h3 {margin-bottom:10px;font-size:16px;margin-top:25px;}
 .header_stories .bottom li { height: 202px; overflow: hidden; }
-.header_stories .title {color:#FFF;margin-top:10px;font-size:14px;padding-left:10px;padding-bottom:10px;font-weight:bold;}
+.header_stories .title {color:#FFF;margin-top:10px;font-size:14px;padding-left:2px;padding-bottom:10px;font-weight:bold;}
 .header_stories a .subtitle_text { font-weight: 200; }
 .header_stories .bottom a .subtitle_text, .header_stories .bottom a .title_colon {display:none;}
-.header_stories .thumbnail { padding: 0; border-radius: 0; border: 0; position: relative; max-width: 100%; float: left; }
+.header_stories .thumbnail { padding: 0; border-radius: 0; border: 0; position: relative; max-width: 100%; float: left; margin-bottom: 5px; }
 /* above: position, max-width, and float are req'd for image inset boxshadow */
 .header_stories .thumbnail:hover::before {
 	content: "";
@@ -159,7 +159,7 @@ h2#footer_logo.outline { background-image: url(static/img/pegasus-logo.png); }
 		border: 0;
 	}
 	
-	.footer_stories .title {margin-top:7px;font-size:14px;padding-left:5px;padding-bottom:5px;font-weight:200;}
+	.footer_stories .title {margin-top:7px;font-size:14px;padding-left:2px;padding-bottom:5px;font-weight:200;}
 	.footer_stories.bottom li { height: 202px; overflow: hidden; }
 	.footer_stories.bottom .title {font-size:13px;margin-top:0px;padding-left:0;}
 	.footer_stories .thumbnail { padding: 0; border-radius: 0; border: 0; position: relative; max-width: 100%; float: left; margin-bottom: 5px; }
